update to v0.2.0 1. 更新：区块支持标识（原：名称）调用 2. 新增：数据库配置功能 3. 新增：兼容支持 Nginx 下自定义路径 4. 新增：支持自定义 URL 格式修改后不需要再次修改服务器URL重写规则 5. 调整：字段调整部分文案和链接修改 6. 调整：模板标签nav名称改为category更符合实际功能 7. 调整：安装数据库指定 utf8mb4 8. 新增：后台路径支持path模式，格式：后台路径/controller/action?其他参数 9. 调整：插件重载时更新信息到数据库 10. 新增：项目捐助通道

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # 相关程序生成的文件
 /src/cache/*
-/src/data/config/database.ini.php
-# 测试
-/test/
+/src/data/*
+/src/data/installed
+sitemap.html
+sitemap.xml
+sitemap.txt
+# 保留文件夹目录 index.html
 !/**/**/index.html
 
+# 测试
+/test/
 # 开发工具文件
 .project
 .settings
@@ -14,3 +19,4 @@
 .netbeans
 .DS_Store
 .vscode
+
