--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,14 +1,15 @@
 RewriteEngine on
 RewriteBase /
-RewriteRule ^index.html$ index.php?c=index [L]
-RewriteRule ^([a-z0-9A-Z]+).html$ index.php?c=index&a=category&catpath=$1 [L]
-RewriteRule ^([a-z0-9A-Z]+)_([0-9]+).html$ index.php?c=index&a=category&catpath=$1&page=$2 [L]
-RewriteRule ^([a-z0-9A-Z]+)/([0-9]+).html$ index.php?c=index&a=show&catpath=$1&id=$2 [L]
-RewriteRule ^([a-z0-9A-Z]+)/([0-9]+)_([0-9]+).html$ index.php?c=index&a=show&catpath=$1&id=$2&page=$3 [L]
-
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /index.php/$1 [L]
+
+# 这是旧的重写规则，您可以按照自己的意愿调整为其他
+# RewriteRule ^index.html$ index.php?c=index [L]
+# RewriteRule ^([a-z0-9A-Z]+).html$ index.php?c=index&a=category&catpath=$1 [L]
+# RewriteRule ^([a-z0-9A-Z]+)_([0-9]+).html$ index.php?c=index&a=category&catpath=$1&page=$2 [L]
+# RewriteRule ^([a-z0-9A-Z]+)/([0-9]+).html$ index.php?c=index&a=show&catpath=$1&id=$2 [L]
+# RewriteRule ^([a-z0-9A-Z]+)/([0-9]+)_([0-9]+).html$ index.php?c=index&a=show&catpath=$1&id=$2&page=$3 [L]
 
 # redirect to https
 # RewriteCond %{SERVER_PORT} !^443$
