1. 首页路由配置 2. 完善：模板标签category对参数ismenu、verify、ispost和islook支持

--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -1,6 +1,9 @@
 location / {
   if (!-e $request_filename) {
+    # for nginx v1.19.x
     rewrite ^(.*)$ /index.php;
+    # nginx v1.20.1-10.el7 (epel)
+    rewrite ^(.*)$ /index.php/$1 last;
   }
 }
 
